--- a/mqtt-bridge/Dockerfile.template
+++ b/mqtt-bridge/Dockerfile.template
@@ -19,7 +19,6 @@ RUN git clone https://github.com/navicore/mqtt-bridge.git && cd mqtt-bridge && g
 RUN mkdir -p /app
 
 WORKDIR /app
-COPY . ./
 
 # Use apt-get to install dependencies
 RUN apt-get update && apt-get install -yq --no-install-recommends \
@@ -31,6 +30,8 @@ RUN curl https://api.github.com/repos/resin-io/resin-wifi-connect/releases/lates
     | grep -hoP 'browser_download_url": "\K.*%%RESIN_ARCH%%\.tar\.gz' \
     | xargs -n1 curl -Ls \
     | tar -xvz -C /app/
+
+COPY start.sh /app/start.sh
 
 ####################
 # deployment stage #
@@ -45,5 +46,5 @@ WORKDIR /app
 ENV DEVICE_TYPE=%%RESIN_MACHINE_NAME%%
 
 # Start application
-CMD ["bash", "start.sh"]
+CMD ["bash", "/app/start.sh"]
 
