--- a/mqtt-bridge/Dockerfile.template
+++ b/mqtt-bridge/Dockerfile.template
@@ -46,5 +46,6 @@ WORKDIR /app
 ENV DEVICE_TYPE=%%RESIN_MACHINE_NAME%%
 
 # Start application
-CMD ["bash", "/app/start.sh"]
+#CMD ["bash", "/app/start.sh"]
+CMD ["bash", "sleep 120"]
 
